--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Project name</title>
+    <title>Click Froggy!</title>
 </head>
 <body>
+    <div class="froggy">
+        <p class="froggy-speak">Ribbbit!</p>
+        <div class="froggy-sprite"></div>
+        <div class="froggy-contextmenu">
+            <p>This frog is copyright of Froggy Industries Inc.</p>
+        </div>
+    </div>
 </body>
-<script src="js/app.js"></script>
 </html>
