--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="modal">
       <div class="modal-content"> 
         <span class="close-btn">&times;</span>
-        <p class="p-modal-content">Calendar of trainings</p>
+        <p class="p-modal-content">Calendar of trainings 'September'</p>
       </div>
     </div>
   </div>
